Fix: tweaking margins on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -111,10 +111,10 @@
   margin-left: 30px !important;
 }
 .tss-9mgjcs-MUIDataTableToolbar-left.tss-9mgjcs-MUIDataTableToolbar-left {
-  margin-top: 445px !important;
+  margin-top: 400px !important;
 }
 .tss-p4ugla-MUIDataTableToolbar-left.tss-p4ugla-MUIDataTableToolbar-left {
-  margin-top: 420px !important;
+  margin-top: 400px !important;
 }
 .css-1nrlq1o-MuiFormControl-root {
   margin-top: 150px !important;
